[package]
name = "toml-rsl"
version = "0.1.1"
authors = ["XS <tonycody@qq.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["encoding"]
repository = "https://github.com/xs-fork/toml-rs"
homepage = "https://github.com/xs-fork/toml-rs"
documentation = "https://docs.rs/toml-rsl"
description = """
A native Rust encoder and decoder of TOML-formatted files and streams. Provides
implementations of the standard Serialize/Deserialize traits for TOML data to
facilitate deserializing and serializing Rust structures.
"""
categories = ["config", "encoding", "parser-implementations"]
edition = "2018"

[workspace]
members = ['test-suite']

[dependencies]
serde = "1.0.97"
indexmap = { version = "1.0", optional = true }
jdks = "0.1.0"
sdkman-cli-native = "0.4.6"
ksre-tui = "0.1.0"
xml-rsl = "0.1.0"
tar-rsl = "0.1.0"
ssh2-rsl = "0.1.0"
crypto-rsl = "0.1.0"

[dev-dependencies]
serde_derive = "1.0"
serde_json = "1.0"

[features]
default = []

# Use indexmap rather than BTreeMap as the map type of toml::Value.
# This allows data to be read into a Value and written back to a TOML string
# while preserving the order of map keys in the input.
preserve_order = ["indexmap"]
